--- a/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/MeetingRoom/MeetingRoomViewController.storyboard
+++ b/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/MeetingRoom/MeetingRoomViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="iPad13_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
@@ -14,19 +14,62 @@
             <objects>
                 <viewController storyboardIdentifier="MeetingRoomViewController" id="Y6W-OH-hqX" customClass="MeetingRoomViewController" customModule="Presentation" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1376" height="1032"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="음음 안뇽안뇽" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Af6-jC-4CA">
-                                <rect key="frame" x="175" y="432" width="93" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mfc-ej-jmd">
+                                <rect key="frame" x="0.0" y="932" width="1376" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="nbW-1W-DRN"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M8A-XE-9V2">
+                                <rect key="frame" x="0.0" y="24" width="1376" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김호성 님의 회의실" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUw-qf-wwy">
+                                        <rect key="frame" x="16" y="17.5" width="177" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="C2b-nq-32S"/>
+                                    <constraint firstItem="oUw-qf-wwy" firstAttribute="centerY" secondItem="M8A-XE-9V2" secondAttribute="centerY" id="I0K-gr-s6T"/>
+                                    <constraint firstItem="oUw-qf-wwy" firstAttribute="leading" secondItem="M8A-XE-9V2" secondAttribute="leading" constant="16" id="W2Q-6l-pom"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKZ-Cc-g31">
+                                <rect key="frame" x="0.0" y="88" width="1136" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NeW-e7-MDf">
+                                <rect key="frame" x="1136" y="88" width="240" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="83f-tP-e9A"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NeW-e7-MDf" firstAttribute="top" secondItem="M8A-XE-9V2" secondAttribute="bottom" id="4l5-Vz-mGp"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="NeW-e7-MDf" secondAttribute="trailing" id="9zJ-Zh-202"/>
+                            <constraint firstItem="Mfc-ej-jmd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="BR3-zP-zpA"/>
+                            <constraint firstAttribute="bottom" secondItem="Mfc-ej-jmd" secondAttribute="bottom" id="EFx-X2-zcG"/>
+                            <constraint firstItem="AKZ-Cc-g31" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Thm-zc-nDl"/>
+                            <constraint firstItem="AKZ-Cc-g31" firstAttribute="top" secondItem="M8A-XE-9V2" secondAttribute="bottom" id="V7j-5A-aGq"/>
+                            <constraint firstItem="Mfc-ej-jmd" firstAttribute="top" secondItem="AKZ-Cc-g31" secondAttribute="bottom" id="WbF-0C-Ghz"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Mfc-ej-jmd" secondAttribute="trailing" id="eFD-TU-fxC"/>
+                            <constraint firstItem="M8A-XE-9V2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ht2-ge-lD2"/>
+                            <constraint firstItem="NeW-e7-MDf" firstAttribute="leading" secondItem="AKZ-Cc-g31" secondAttribute="trailing" id="tez-T3-lER"/>
+                            <constraint firstItem="Mfc-ej-jmd" firstAttribute="top" secondItem="NeW-e7-MDf" secondAttribute="bottom" id="uQr-L0-Kpa"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="M8A-XE-9V2" secondAttribute="trailing" id="v2q-Bj-7BC"/>
+                            <constraint firstItem="M8A-XE-9V2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="zUN-ld-jTy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
