--- a/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/Cell/ChatTableViewCell/ChatTableViewCell.xib
+++ b/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/Cell/ChatTableViewCell/ChatTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ChatTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="113" id="nLa-62-VYR" customClass="ChatTableViewCell" customModule="CollaborativeComputingLab" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ChatTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="113" id="nLa-62-VYR" customClass="ChatTableViewCell" customModule="Presentation">
             <rect key="frame" x="0.0" y="0.0" width="488" height="113"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nLa-62-VYR" id="0J5-rH-ULk">
