--- a/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
+++ b/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
@@ -33,15 +33,25 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e8N-Nc-6Ff">
+                                        <rect key="frame" x="926.5" y="14.5" width="89.5" height="35"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="PDF 열기"/>
+                                        <connections>
+                                            <action selector="onClickFile:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="bOY-N1-7hz"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="C2b-nq-32S"/>
                                     <constraint firstItem="oUw-qf-wwy" firstAttribute="centerY" secondItem="M8A-XE-9V2" secondAttribute="centerY" id="I0K-gr-s6T"/>
                                     <constraint firstItem="oUw-qf-wwy" firstAttribute="leading" secondItem="M8A-XE-9V2" secondAttribute="leading" constant="16" id="W2Q-6l-pom"/>
+                                    <constraint firstItem="e8N-Nc-6Ff" firstAttribute="centerY" secondItem="M8A-XE-9V2" secondAttribute="centerY" id="Whx-U7-d1t"/>
+                                    <constraint firstAttribute="trailing" secondItem="e8N-Nc-6Ff" secondAttribute="trailing" constant="16" id="vaL-wn-bDv"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKZ-Cc-g31">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKZ-Cc-g31" customClass="PDFView">
                                 <rect key="frame" x="0.0" y="88" width="792" height="1188"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
@@ -115,6 +125,7 @@
                         <outlet property="chatButton" destination="aYO-la-c15" id="z4G-Wy-pfO"/>
                         <outlet property="chatTableView" destination="uBO-O2-csA" id="Jsh-Op-bdS"/>
                         <outlet property="chatTextField" destination="htA-P6-K08" id="3xz-ZB-h5W"/>
+                        <outlet property="pdfView" destination="AKZ-Cc-g31" id="rzC-Rz-JwM"/>
                         <outlet property="titleLabel" destination="oUw-qf-wwy" id="YeM-2H-lbz"/>
                     </connections>
                 </viewController>
