--- a/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
+++ b/Frontend/CollaborativeComputingLab/Presentation/Sources/Presentation/View/ViewController/Room/RoomViewController.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="iPad13_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -64,52 +65,25 @@
                                 <rect key="frame" x="0.0" y="88" width="792" height="1188"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKZ-Cc-g31" customClass="PDFView">
-                                        <rect key="frame" x="0.0" y="0.0" width="792" height="1124"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="792" height="1188"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFB-u4-96h">
-                                        <rect key="frame" x="0.0" y="1124" width="792" height="64"/>
-                                        <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-0R-fRv">
-                                                <rect key="frame" x="0.0" y="0.0" width="792" height="64"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mrx-H8-jCs">
-                                                        <rect key="frame" x="0.0" y="0.0" width="396" height="64"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system"/>
-                                                        <connections>
-                                                            <action selector="onClickPrevious:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="cS7-4x-mXB"/>
-                                                        </connections>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyf-DL-ift">
-                                                        <rect key="frame" x="396" y="0.0" width="396" height="64"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system"/>
-                                                        <connections>
-                                                            <action selector="onClickNext:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="65G-at-oN9"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="64" id="T9g-Cg-i3D"/>
-                                            <constraint firstItem="MhJ-0R-fRv" firstAttribute="top" secondItem="xFB-u4-96h" secondAttribute="top" id="UYU-tN-TTK"/>
-                                            <constraint firstAttribute="trailing" secondItem="MhJ-0R-fRv" secondAttribute="trailing" id="bGV-Ut-HQ2"/>
-                                            <constraint firstItem="MhJ-0R-fRv" firstAttribute="leading" secondItem="xFB-u4-96h" secondAttribute="leading" id="k8m-nE-UfE"/>
-                                            <constraint firstAttribute="bottom" secondItem="MhJ-0R-fRv" secondAttribute="bottom" id="uwa-Kg-iGV"/>
-                                        </constraints>
-                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYx-S7-apI">
+                                        <rect key="frame" x="726" y="16" width="50" height="34"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="pencil.tip.crop.circle" catalog="system"/>
+                                        <connections>
+                                            <action selector="onClickCanvas:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ytx-oy-8bD"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="AKZ-Cc-g31" firstAttribute="leading" secondItem="npM-F4-5wY" secondAttribute="leading" id="9id-DN-puD"/>
-                                    <constraint firstAttribute="bottom" secondItem="xFB-u4-96h" secondAttribute="bottom" id="BjM-37-eX4"/>
                                     <constraint firstAttribute="trailing" secondItem="AKZ-Cc-g31" secondAttribute="trailing" id="M7y-Cb-kz9"/>
-                                    <constraint firstAttribute="trailing" secondItem="xFB-u4-96h" secondAttribute="trailing" id="Nql-au-kTQ"/>
-                                    <constraint firstItem="xFB-u4-96h" firstAttribute="leading" secondItem="npM-F4-5wY" secondAttribute="leading" id="WK3-Lg-XPx"/>
-                                    <constraint firstItem="xFB-u4-96h" firstAttribute="top" secondItem="AKZ-Cc-g31" secondAttribute="bottom" id="mFH-D7-qns"/>
+                                    <constraint firstAttribute="trailing" secondItem="gYx-S7-apI" secondAttribute="trailing" constant="16" id="fcB-zq-5zq"/>
+                                    <constraint firstItem="gYx-S7-apI" firstAttribute="top" secondItem="npM-F4-5wY" secondAttribute="top" constant="16" id="g1N-3B-roh"/>
+                                    <constraint firstAttribute="bottom" secondItem="AKZ-Cc-g31" secondAttribute="bottom" id="gvR-SI-Dty"/>
                                     <constraint firstItem="AKZ-Cc-g31" firstAttribute="top" secondItem="npM-F4-5wY" secondAttribute="top" id="mSj-F1-2Gt"/>
                                 </constraints>
                             </view>
@@ -194,9 +168,8 @@
     </scenes>
     <resources>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
-        <image name="chevron.left" catalog="system" width="97" height="128"/>
-        <image name="chevron.right" catalog="system" width="97" height="128"/>
         <image name="paperplane" catalog="system" width="128" height="119"/>
+        <image name="pencil.tip.crop.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
